--- a/ui/Cargo.toml
+++ b/ui/Cargo.toml
@@ -15,3 +15,4 @@ web-sys = { version = "0.3.83", features = ["CanvasRenderingContext2d", "HtmlCan
 common = { path = "../common" }
 tokio = { version = "1.48.0", features = ["sync"] }
 futures = "0.3.31"
+js-sys = "0.3.83"
