--- a/ui/Cargo.toml
+++ b/ui/Cargo.toml
@@ -16,3 +16,10 @@ common = { path = "../common" }
 tokio = { version = "1.48.0", features = ["sync"] }
 futures = "0.3.31"
 js-sys = "0.3.83"
+console_error_panic_hook = "0.1.7"
+
+[profile.dev]
+debug = true
+
+[profile.release]
+debug = true
